--- a/Work/Dataset/Complex dataset.html
+++ b/Work/Dataset/Complex dataset.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap core CSS -->
     <link href = "css/bootstrap.min.css" rel="stylesheet">
     <link href = "css/bootstrap-theme.min.css" rel="stylesheet">
-    <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src = "js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://rawgit.com/lukaskral/bootstrap-table/feature_lukaskral_bootstrap_table_filter_integration/dist/bootstrap-table.min.css">
     <script src="https://rawgit.com/lukaskral/bootstrap-table/feature_lukaskral_bootstrap_table_filter_integration/src/bootstrap-table.js"></script>
