--- a/Work/Dataset/Complex dataset.html
+++ b/Work/Dataset/Complex dataset.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
 
-    <title>Office for National Statistics(ONS)</title>
+    <title>Office for National Statistics</title>
 
     <!-- Bootstrap core CSS -->
     <link href = "css/bootstrap.min.css" rel="stylesheet">
