New pattern library template + dataset page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Work playing</title>
 </head>
 <body>
-
+	<a href = "/Work/new-pattern/template.html">Template</a>
+     
+     
 </body>
 </html>
