added additional items and updates for accordian

--- a/Work/new-pattern/complex-dataset/index.html
+++ b/Work/new-pattern/complex-dataset/index.html
@@ -195,12 +195,50 @@
                           <h2>About this dataset</h2>
                           		<p class="margin-top-sm--0 margin-top-md--0">Comprehensive database of time series covering measures of inflation data including CPI, CPIH, RPI and RPIJ.</p>
                             		<h2 class="margin-top-sm--0 margin-top-md--0 margin-bottom-sm--1 margin-bottom-md--1">Your download options</h2>
-                          				<div class="col-wrap margin-left-sm--0 margin-left-md--0">
-                            				<a href="/file?uri=/economy/inflationandpriceindices/datasets/consumerpriceindices/current/mm23.csv" title="Download as csv" class="btn btn--primary btn--thick" data-ga-event="" data-ga-event-category="download-csv" data-ga-event-label="Consumer Price Inflation time series dataset - Current">csv (11.3 MB)</a>
-                            				<a href="/file?uri=/economy/inflationandpriceindices/datasets/consumerpriceindices/current/mm23.xlsx" title="Download as xlsx" class="btn btn--primary btn--thick" data-ga-event="" data-ga-event-category="download-xlsx" data-ga-event-label="Consumer Price Inflation time series dataset - Current">xlsx (9.9 MB)</a>
-                            				<a href="/file?uri=/economy/inflationandpriceindices/datasets/consumerpriceindices/current/mm23.csdb" title="Download as csdb" class="btn btn--primary btn--thick" data-ga-event="" data-ga-event-category="download-csdb" data-ga-event-label="Consumer Price Inflation time series dataset - Current">structured text (6.4 MB)</a>
-                         				</div>
-                            		<p class="flush"><span class="icon icon-info--inline"></span> <a class="underline-link margin-left-sm--3 margin-left-md--3" href="/economy/inflationandpriceindices/datasets/consumerpriceindices/current">Previous versions</a> of this data are available</p>
+
+                                   <div class="show-hide show-hide--light border-top--abbey-sm border-top--abbey-md border-top--abbey-lg  js-show-hide">
+                                      <div class="js-show-hide__title is-shown"><button class="js-show-hide__button" type="button" aria-expanded="true" aria-controls="collapsible-0">
+                                        <h3 class="margin-top-sm--0 margin-top-md--0 margin-bottom-sm--0 margin-bottom-md--0">2015: Provisional</h3>
+                                          </button>
+                                     	</div>
+                                       <div class="js-show-hide__content" id="collapsible-0" aria-hidden="false">
+                                         	<div class="col-wrap margin-left-sm--0 margin-left-md--0">
+                                          	<div class="col col--md-8 col--lg-9 margin-bottom-sm--2 margin-bottom-md--2">
+                                          		<a href="/file?uri=/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/agegroupashetable6/2015/rft-6.zip" title="Download as zip" class="btn btn--primary btn--thick" data-ga-event="" data-ga-event-category="download-zip" data-ga-event-label="Age Group - ASHE: Table 6 - 2015">zip (338.2 kB)</a>
+                                          	</div>
+                                        	</div>
+                                         	<p class="flush"><span class="icon icon-info--inline"></span> <a class="underline-link margin-left-sm--3 margin-left-md--3" href="/economy/inflationandpriceindices/datasets/consumerpriceindices/current">Previous versions</a> of this data are available</p>
+                                      	</div>
+                                   </div>
+                                   <div class="show-hide show-hide--light border-top--abbey-sm border-top--abbey-md border-top--abbey-lg  js-show-hide">
+                                      <div class="js-show-hide__title"><button class="js-show-hide__button" type="button" aria-expanded="false" aria-controls="collapsible-0">
+                                        <h3 class="margin-top-sm--0 margin-top-md--0 margin-bottom-sm--0 margin-bottom-md--0">2014: Revised</h3>
+                                          </button>
+                                     	</div>
+                                       <div class="js-show-hide__content" id="collapsible-0" aria-hidden="true">
+                                         	<div class="col-wrap margin-left-sm--0 margin-left-md--0">
+                                          	<div class="col col--md-8 col--lg-9 margin-bottom-sm--2 margin-bottom-md--2">
+                                          		<a href="/file?uri=/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/agegroupashetable6/2015/rft-6.zip" title="Download as zip" class="btn btn--primary btn--thick" data-ga-event="" data-ga-event-category="download-zip" data-ga-event-label="Age Group - ASHE: Table 6 - 2015">zip (338.2 kB)</a>
+                                          	</div>
+                                        	</div>
+                                         	<p class="flush"><span class="icon icon-info--inline"></span> <a class="underline-link margin-left-sm--3 margin-left-md--3" href="/economy/inflationandpriceindices/datasets/consumerpriceindices/current">Previous versions</a> of this data are available</p>
+                                      	</div>
+                                   </div>                         
+                                   <div class="show-hide show-hide--light border-top--abbey-sm border-top--abbey-md border-top--abbey-lg  js-show-hide">
+                                      <div class="js-show-hide__title"><button class="js-show-hide__button" type="button" aria-expanded="false" aria-controls="collapsible-0">
+                                        <h3 class="margin-top-sm--0 margin-top-md--0 margin-bottom-sm--0 margin-bottom-md--0">2013: Revised</h3>
+                                          </button>
+                                     	</div>
+                                       <div class="js-show-hide__content" id="collapsible-0" aria-hidden="true">
+                                         	<div class="col-wrap margin-left-sm--0 margin-left-md--0">
+                                          	<div class="col col--md-8 col--lg-9 margin-bottom-sm--2 margin-bottom-md--2">
+                                          		<a href="/file?uri=/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/agegroupashetable6/2015/rft-6.zip" title="Download as zip" class="btn btn--primary btn--thick" data-ga-event="" data-ga-event-category="download-zip" data-ga-event-label="Age Group - ASHE: Table 6 - 2015">zip (338.2 kB)</a>
+                                          	</div>
+                                        	</div>
+                                         	<p class="flush"><span class="icon icon-info--inline"></span> <a class="underline-link margin-left-sm--3 margin-left-md--3" href="/economy/inflationandpriceindices/datasets/consumerpriceindices/current">Previous versions</a> of this data are available</p>
+                                      	</div>
+                                   </div>                         
+                            		
                      	</div>
                         <div class="section__content--static-markdown float-left">
                            <section>
