--- a/Work/time-series/index.html
+++ b/Work/time-series/index.html
@@ -31,7 +31,7 @@
 
 
 
-      fetch( api + timeseries )
+      fetch( api + timeseries , {mode: 'cors'} )
       .then(data => data.json())
       .then(function(data) {
         let variations = data.items;
